# calibration-done-right

./: .gitignore  Cargo.toml  README.md
aes-t-tables/: Cargo.toml  README  cargo.sh  prefetcher_notes  setup.sh
aes-t-tables/src/: lib.rs  main.rs
basic_timing_cache_channel/: Cargo.toml
basic_timing_cache_channel/src/: lib.rs  naive.rs
cache_side_channel/: Cargo.toml
cache_side_channel/src/: lib.rs  table_side_channel.rs
cache_utils/: Cargo.toml  analyse.sh  analyse_csv.py  analyse_medians.py  extract_analysis_csv.sh  requirements.txt
cache_utils/src/: cache_info.rs  calibrate_2t.rs  calibration.rs  complex_addressing.rs  frequency.rs  lib.rs  main.rs  mmap.rs  prefetcher.rs
covert_channels_benchmark/: Cargo.toml  covert_channel_extract_csv.sh
covert_channels_benchmark/src/: main.rs
covert_channels_evaluation/: Cargo.toml
covert_channels_evaluation/src/: lib.rs
cpuid/: Cargo.toml
cpuid/src/: lib.rs  main.rs
flush_flush/: Cargo.toml
flush_flush/src/: lib.rs  naive.rs
flush_reload/: Cargo.toml
flush_reload/src/: lib.rs  naive.rs
turn_lock/: Cargo.toml
turn_lock/src/: lib.rs
