[workspace]

members = [
#    "vga_buffer",
#    "polling_serial",
    "cache_utils",
    "cpuid",
    "aes-t-tables",
    "covert_channels_benchmark",
    "covert_channels_evaluation",
    "cache_side_channel",
    "flush_reload",
    "flush_flush",
    "basic_timing_cache_channel",
    "turn_lock",
]

[profile.dev]
opt-level = 1
debug = 2


[profile.test]
opt-level = 1
debug = 2

