[package]
name = "covert_channels_benchmark"
version = "0.1.0"
authors = ["Guillume DIDIER <guillaume.didier@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covert_channels_evaluation = { path = "../covert_channels_evaluation" }
flush_flush = { path = "../flush_flush" }
flush_reload = { path = "../flush_reload" }
nix = "0.20.0"
basic_timing_cache_channel = { path = "../basic_timing_cache_channel" }
cache_utils = { path = "../cache_utils" }


